update: API documentation with swagger
