# src/controllers/authController.js
@@ -26,13 +26,26 @@ module.exports = {
 
   //Registrar usuário
   createUser: async (req, res) => {
-    /**
-     * #swagger.tags = ['Login']
-     * #swagger.description = 'Endpoint para registrar na aplicação.'
-     * 
-     */
-    const { email } = req.body;
+    /* swagger doc
+    #swagger.tags = ['Authorization']
+    #swagger.summary = "Create a user to login in API"
+   
+    #swagger.parameters['obj'] = {
+           in: 'body',
+           description: 'Name, Email and Password.',
+           required: true,
+           schema: { $ref: "#/definitions/AddUser" }
+   }
 
+    #swagger.responses[200] = { 
+      schema: { "$ref": "#/definitions/UserCreated" },
+      description: "New user created." }
+
+    #swagger.responses[400] = { description: 'Something goes wrong' }
+    */
+
+
+    const { email } = req.body;
     try {
       //verifica se já tem algum user com o mesmo email
       if (await User.findOne({ email })) {
@@ -54,12 +67,11 @@ module.exports = {
 
   //Login Usuário
   authUser: async (req, res) => {
-    /**
-     * #swagger.tags = ['Login']
-     * #swagger.description = 'Endpoint para logar na aplicação.'
-     * #swagger.parameters['email'] = { description: 'User Email.', type: 'string', required: true, in:'body' }
-     * #swagger.parameters['password'] = { description: 'User password.', type: 'string', required: true, in:'body' }
-     */
+    // #swagger.tags = ['Authorization']
+    // #swagger.summary = 'Login in application.'
+    // #swagger.parameters['email'] = { description: 'User Email.', type: 'string', required: true, in:'body' }
+    // #swagger.parameters['password'] = { description: 'User password.', type: 'string', required: true, in:'body' }
+
     try {
       const { email, password } = req.body;
 
@@ -82,11 +94,10 @@ module.exports = {
 
   //Forgot password
   forgotPassword: async (req, res) => {
-    /**
-     * #swagger.tags = ['Login']
-     * #swagger.description = 'Endpoint para recuperar senha.'
-     * 
-     */
+    //  #swagger.tags = ['Authorization']
+    //  #swagger.summary = 'Endpoint to recover password.'
+    //  #swagger.parameters['email'] = { description: 'User Email.', type: 'string', required: true, in:'body' }
+
 
     try {
       const { email } = req.body;
@@ -144,11 +155,13 @@ module.exports = {
 
   //Reset password
   passwordReset: async (req, res) => {
-    /**
-      * #swagger.tags = ['Login']
-      * #swagger.description = 'Endpoint para trocar a senha.'
-      * 
-      */
+    // #swagger.tags = ['Authorization']
+    // #swagger.summary = 'Endpoint to change password.'
+    // #swagger.parameters['email'] = { description: 'User Email.', type: 'string', required: true, in:'body' }
+    // #swagger.parameters['token'] = { description: 'Token received by email.', type: 'string', required: true, in:'body' }
+    // #swagger.parameters['password'] = { description: 'A new user password.', type: 'string', required: true, in:'body' }
+
+
 
     try {
       const { email, token, password } = req.body;
